# modpack-manager

./: .gitignore  CMakeLists.txt  README.md  download.cpp  download.h  main.cpp  vcpkg.json
src/: console.cpp  console.h  download.cpp  download.h  file_editor.cpp  file_editor.h  main.cpp
